...
                                    imageVector = Icons.Default.AddPhotoAlternate,
                                    contentDescription = null,
                                    tint = GenesysTheme.colors.brand,
                                    modifier = Modifier.size(32.dp),
                                )
                                GenesysText(
                                    text = "Adicionar",
                                    fontWeight = GenesysFontWeight.Bold,
                                )
                            }
                        }
                    }
                }
...
