...
    GenesysCard {
        GenesysColumn(usePadding = false) {
            GenesysText(text = GenesysStrings.Identification, style = GenesysTextStyle.Title, fontWeight = GenesysFontWeight.Bold)
            GenesysSpacer(GenesysTheme.spacing.m)
            GenesysTextField(value = state.customerName, onValueChange = { onEvent(CartScreenEvent.OnCustomerNameChanged(it)) }, label = GenesysStrings.CustomerNameLabel, placeholder = GenesysStrings.CheckoutNameHint, icon = GenesysIcons.Person)
            GenesysSpacer(GenesysTheme.spacing.m)
            GenesysTextField(value = state.customerPhone, onValueChange = { onEvent(CartScreenEvent.OnCustomerPhoneChanged(it)) }, label = "Seu WhatsApp / Telefone", placeholder = "(00) 00000-0000", icon = GenesysIcons.Chat)
        }
    }
}

@Composable
private fun PaymentMethodCard(
...
